# advent-of-code-python

./: .coveragerc  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yaml
files/: expected_results.json
helper_scripts/: __init__.py  fetch_problem_name.py  setup_project.py
input_output/: __init__.py  a2015.py  a2016.py  a2017.py  a2018.py  a2019.py  a2020.py  a2021.py  a2022.py  animation.py  file_parser.py  progress_bar.py  run_solutions.py
input_output/cli/: __init__.py  cli_input_reader.py  cli_output_writer.py  cli_progress_bar.py  json_result_checker.py
models/: a2015_d1.py  a2015_d3.py  char_grid.py  progress_bar_protocol.py
models/aoc_2015/: __init__.py  a2015_d10.py  a2015_d13.py  a2015_d14.py  a2015_d15.py  a2015_d16.py  a2015_d17.py  a2015_d18.py  a2015_d19.py  a2015_d2.py  a2015_d21.py  a2015_d24.py  a2015_d25.py  a2015_d3.py  a2015_d4.py  a2015_d7.py  a2015_d8.py  a2015_d9.py
models/aoc_2016/: __init__.py  a2016_d1.py  a2016_d11.py  a2016_d12.py  a2016_d13.py  a2016_d14.py  a2016_d15.py  a2016_d16.py  a2016_d17.py  a2016_d18.py  a2016_d2.py  a2016_d20.py  a2016_d21.py  a2016_d23.py  a2016_d24.py  a2016_d25.py  a2016_d3.py  a2016_d4.py  a2016_d5.py  a2016_d6.py  a2016_d7.py  a2016_d8.py  a2016_d9.py  assembunny.py
models/aoc_2017/: __init__.py  a2017_d1.py  a2017_d10.py  a2017_d11.py  a2017_d12.py  a2017_d13.py  a2017_d14.py  a2017_d15.py  a2017_d16.py  a2017_d17.py  a2017_d18.py  a2017_d19.py  a2017_d2.py  a2017_d20.py  (+12 more)
tests/: test_a2015_d1.py  test_a2015_d2.py  test_a2015_d3.py  test_file_parser.py
(+1913 files in other folders)
