[tool.poetry]
name = "advent-of-code-python"
version = "0.1.0"
description = "Solutions to Advent of Code problems"
authors = ["Tomas Tamantini <tomasbft@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_python"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
preview = true
select = ['I']

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
run = "python main.py --check-results"
pre_format = "ruff check . --fix"
format = "ruff format ."
test = "pytest -s -x --cov=models --cov-config=.coveragerc -vv"
post_test = "coverage html"
